[gd_scene load_steps=16 format=3 uid="uid://c5uu1sg454gi8"]

[ext_resource type="Script" path="res://Scripts/FrasesNivel1.gd" id="1_okuio"]
[ext_resource type="PackedScene" uid="uid://dyhyi34qkkc8g" path="res://Escenas/instrucciones_frases.tscn" id="2_kvqyg"]
[ext_resource type="Texture2D" uid="uid://dfqhr1lcxhukc" path="res://Sprites/global/Background_game.png" id="3_7mnxy"]
[ext_resource type="PackedScene" uid="uid://dr445orecfavc" path="res://Escenas/Global/box_inside_game_f.tscn" id="3_ayreh"]
[ext_resource type="AudioStream" uid="uid://dcc8bp4mt3gek" path="res://Sonido/kids-saying-yay-sound-effect_3.mp3" id="5_kb656"]
[ext_resource type="Texture2D" uid="uid://8r4ho23wivj1" path="res://Sprites/images_games/order/Ave.png" id="6_00qcf"]
[ext_resource type="Texture2D" uid="uid://c3uifa2tgytbe" path="res://Sprites/mini_games/tableroPuzzle.png" id="8_oxb7f"]
[ext_resource type="PackedScene" uid="uid://bgribmoxwwcdd" path="res://Piezas/piezaBox.tscn" id="8_wcpfu"]
[ext_resource type="PackedScene" uid="uid://d0n52w01vfldv" path="res://Piezas/piezaBox1.tscn" id="9_er4o8"]
[ext_resource type="PackedScene" uid="uid://dx37iwurtxyud" path="res://Piezas/piezaBox2.tscn" id="10_jefew"]
[ext_resource type="PackedScene" uid="uid://1fgrvi3d8xdc" path="res://Piezas/piezaPuzzle.tscn" id="10_n0fw4"]

[sub_resource type="Animation" id="Animation_4b8yg"]
resource_name = "Gana"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cadenas/Pieza0:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.2, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.3, 0.3), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cadenas/Pieza1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.3, 0.3), Vector2(0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cadenas/Pieza2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.3, 0.3), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_jcy4g"]
resource_name = "PistaPieza"

[sub_resource type="Animation" id="Animation_kijen"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cadenas/Pieza0:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cadenas/Pieza1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cadenas/Pieza2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_batyl"]
_data = {
"Gana": SubResource("Animation_4b8yg"),
"PistaPieza": SubResource("Animation_jcy4g"),
"RESET": SubResource("Animation_kijen")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_okuio")
metadata/_edit_horizontal_guides_ = [-100.0]
metadata/_edit_vertical_guides_ = [300.0]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="InstruccionesFrases" parent="CanvasLayer2" instance=ExtResource("2_kvqyg")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(636.987, 454.85)
scale = Vector2(0.211671, 0.211671)
texture = ExtResource("3_7mnxy")

[node name="Box_inside_game" parent="." instance=ExtResource("3_ayreh")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kb656")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.901961, 1, 1, 1)
position = Vector2(647.239, 339.125)
scale = Vector2(0.2238, 0.2238)
texture = ExtResource("6_00qcf")

[node name="Ordenada" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ordenada"]
position = Vector2(654.34, 760)
scale = Vector2(0.239555, 0.227204)
texture = ExtResource("8_oxb7f")

[node name="piezaBox1" parent="Ordenada" instance=ExtResource("8_wcpfu")]
position = Vector2(666.42, 761)
scale = Vector2(0.2, 0.2)
letter = "She"

[node name="piezaBox2" parent="Ordenada" instance=ExtResource("9_er4o8")]
position = Vector2(904.62, 761)
scale = Vector2(0.2, 0.2)

[node name="piezaBox0" parent="Ordenada" instance=ExtResource("10_jefew")]
position = Vector2(428, 761)
scale = Vector2(0.2, 0.2)
letter = "She"

[node name="Cadenas" type="Node2D" parent="."]

[node name="Pieza0" parent="Cadenas" instance=ExtResource("10_n0fw4")]
position = Vector2(960, 610)
scale = Vector2(0.2, 0.2)
letter = "She"

[node name="Pieza1" parent="Cadenas" instance=ExtResource("10_n0fw4")]
position = Vector2(304, 610)
scale = Vector2(0.2, 0.2)

[node name="Pieza2" parent="Cadenas" instance=ExtResource("10_n0fw4")]
position = Vector2(621, 610)
scale = Vector2(0.2, 0.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_batyl")
}
